--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ development:
   pool: 5
   username: root
   password:
-  host: localhost
+  socket: /opt/lampp/var/mysql/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -26,7 +26,7 @@ test:
   pool: 5
   username: root
   password:
-  host: localhost
+  socket: /opt/lampp/var/mysql/mysql.sock
 
 production:
   adapter: mysql2
@@ -36,4 +36,4 @@ production:
   pool: 5
   username: root
   password:
-  host: localhost
+  socket: /opt/lampp/var/mysql/mysql.sock
